# exquisite-exoplanets

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  setup.sh
.github/actions/setup/: action.yaml
.github/workflows/: lint.yaml  lint_all.yaml
api/: Dockerfile  README.md  README_GAME_ENGINE.md  pyproject.toml
api/game_config/: Planet.yaml  PlanetOld.yaml  Resource.yaml  ResourceCollector.yaml
api/src/: Company.py  Planet.py  Resource.py  YamlReader.py  __init__.py  company.py  db.py  logs.py  main.py  models.py  planet.py  resource.py  resource_collector.py  snekbox.py  yaml_reader.py
api/src/classes/: achievements.py  collector.py  company.py  pagination.py  planet.py  resource.py  shop.py  user.py
api/src/routers/: achievement.py  collector.py  company.py  planet.py  resource.py  shop.py  user.py
bot/: Dockerfile  pyproject.toml
bot/src/: context.py  main.py
bot/src/cogs/: accounts.py  companies.py  explore.py  ping.py  planet.py  shop.py
bot/src/wrapper/: __init__.py  _api_schema.py  _communication.py  api_schema.py  error.py  interface.py  schema.py
game_config/: Planet.yaml  Resource.yaml  ResourceCollector.yaml
src/: main.py
