[tool.ruff]
line-length = 119
target-version = "py312"
fix = true
src = ["src"]

[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
  # Missing docstrings.
  "D100",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # Docstring whitespace.
  "D203",
  "D213",
  # Docstring punctuation.
  "D415",
  # Docstring quotes.
  "D301",
  # Builtins.
  "A",
  # Print statements.
  "T20",
  # TODOs.
  "TD002",
  "TD003",
  "FIX",
  # Annotations.
  "ANN101",
  "ANN102",
  # Conflict fix
  "COM812",
  "ISC001",
]

[tool.poetry]
name = "exoquisite-exoplanets"
version = "0.1.0"
description = "A discord bot for the python discord codejam 11"
authors = ["Author 1 <email@mail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
python-dotenv = "^1.0.1"
py-cord = "^2.6.0"

[tool.poetry.dev-dependencies]
ruff = "~0.5.0"
pre-commit = "~3.7.1"
pyright = "^1.1.372"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/playground"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportUnknownMemberType = false
reportUnknownVariableType = false
